# yazi.nvim

./: .busted  .gitignore  .gitmodules  .linkspector.yml  .luarc.json  .lychee.toml  .markdownlint.json  .mise.ci.toml  .mise.toml  .neoconf.json  .oxfmtrc.json  .prettierignore  .prettierrc.yaml  .release-please-manifest.json  .rumdl.toml  .stylua.toml  CHANGELOG.md  CMakeLists.txt  COMMUNITY.md  LICENSE  Makefile  README.md  commitlint.config.ts  default.nix  flake.nix  hyprload.toml  install.sh  justfile  knip.json  lazy-lock.json  lazy.lua  lychee.toml  meson.build  mise.toml  oxfmt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  (+4 more)
.github/: dependabot.yml
.github/workflows/: .luarc.json  commitlint.yml  docs.yml  eslint.yml  issues.yml  linkspector.yml  lint.yml  release-luarocks.yml  release.yml  style.yml  test.yml  typecheck.yml  updater.yml  zizmor.yml
demo/: demo.tape  file-1.txt  file-2.txt  file-3.txt
documentation/: copy-relative-path-to-files.md  emitting-commands-to-yazi.md  installing-yazi-from-source.md  integrations-with-yazi-plugins.md  lsp-renaming.md  plugin-management.md  plugin-manager.md  reproducing-issues.md  yazi-keymappings.md
documentation/for-developers/: developing.md  lsp-renaming.md  setting-up.md
integration-tests/: .eslintrc.cjs  .npmrc  .oxlintrc.json  MyTestDirectory.ts  cypress.config.ts  eslint.config.mjs  index.html  oxlint.config.ts  package.json  tsconfig.json  tui-sandbox.config.ts  vite.config.js
integration-tests/client/: __global.ts  client.ts  neovim-client.ts  startAppGlobalType.ts  style.css  testEnvironmentTypes.ts  tsconfig.json  websocket-client.ts
lua/: joshuto.lua  yazi.lua
nvim.yazi/: keymaps.lua  main.lua  publish.lua
plugin/: joshuto.vim  yazi.lua  yazi.vim
scripts/: init.lua
src/: GridLayout.cpp  GridLayout.hpp  dispatchers.cpp  dispatchers.hpp  globaleventhook.cpp  globaleventhook.hpp  globals.hpp  log.hpp  main.cpp
yazi-plugin/: .luarc.json
yazi-plugins/: .luarc.json
(+247 files in other folders)
